added output file to part 1

--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "d0c8ce0d-9dcf-4e7a-9c30-333d67577eac",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'float' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-f47d0c7389eb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m             \u001b[0mmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[0mmax_month\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'float' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Analysis\n",
+      "--------------------------------\n",
+      "Total Months: 86\n",
+      "Total: $38382578.0\"\n",
+      "Average Change: $446309.05\n",
+      "Greatest Increase in Profits: Feb-2012 ($1170593)\n",
+      "Greatest Decrease in Profits: Sep-2013 ($-1196225)\n",
+      "\n"
      ]
     }
    ],
@@ -24,6 +27,9 @@
     "count = 0\n",
     "max = 0\n",
     "min = 0\n",
+    "min_month = \"\"\n",
+    "max_month = \"\"\n",
+    "average = 0\n",
     "data = []\n",
     "with open('budget_data.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
@@ -40,13 +46,19 @@
     "        sum += float(row[1])\n",
     "        \n",
     "    average = sum/count\n",
-    "    print(\"Financial Analysis\")\n",
-    "    print(\"--------------------------------\")\n",
-    "    print(\"Total Months: \", count)\n",
-    "    print(f\"Total: ${sum}\")\n",
-    "    print(f\"Average Change: ${average:.2f}\")\n",
-    "    print(f\"Greatest Increase in Profits: {max_month} (${max})\")\n",
-    "    print(f\"Greatest Decrease in Profits: {min_month} (${min})\")"
+    "    text = f'''Financial Analysis\n",
+    "--------------------------------\n",
+    "Total Months: {count}\n",
+    "Total: ${sum}\"\n",
+    "Average Change: ${average:.2f}\n",
+    "Greatest Increase in Profits: {max_month} (${max})\n",
+    "Greatest Decrease in Profits: {min_month} (${min})\n",
+    "'''\n",
+    "    print(text)\n",
+    "    with open(\"output.txt\", 'w') as out_file:\n",
+    "        out_file.write(text)\n",
+    "        \n",
+    "    "
    ]
   },
   {
