--- a/PyRamen/main.ipynb
+++ b/PyRamen/main.ipynb
@@ -2,22 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "49e4ae84-bcf2-4b56-87cc-9bca3cbdb1f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
+    "import json\n",
     "menu = []\n",
     "sales = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fbfa1e93-3482-44c2-8d29-3c7164bd016c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['item', 'category', 'description', 'price', 'cost']\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"menu_data.csv\", \"r\") as file:\n",
     "    reader = csv.reader(file)\n",
@@ -29,10 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4629d1ff-44b2-489c-af51-99f204ccc39c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Line_Item_ID', 'Date', 'Credit_Card_Number', 'Quantity', 'Menu_Item']\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"sales_data.csv\", \"r\") as file:\n",
     "    reader = csv.reader(file)\n",
@@ -44,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e4d1bb32-e2c2-427f-935d-c0dbf1e59bc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "report = {}\n",
     "for row in sales:\n",
-    "    quantity = row[3]\n",
+    "    quantity = int(row[3])\n",
     "    menu_item = row[4]\n",
     "    if menu_item not in report:\n",
     "        report[menu_item] = {\n",
@@ -59,7 +76,26 @@
     "            \"02-revenue\": 0,\n",
     "            \"03-cogs\": 0,\n",
     "            \"04-profit\": 0\n",
-    "            }"
+    "            }\n",
+    "        \n",
+    "    for item in menu:\n",
+    "        name = item[0]\n",
+    "        price = float(item[3])       \n",
+    "        cost = float(item[4])\n",
+    "        profit = price - cost\n",
+    "        if name == menu_item:\n",
+    "            report[name][\"01-count\"] += quantity\n",
+    "            report[name][\"02-revenue\"] += price * quantity\n",
+    "            report[name][\"03-cogs\"] += cost * quantity \n",
+    "            report[name][\"04-profit\"] += profit * quantity\n",
+    "\n",
+    "#         else:\n",
+    "#             print(f\"{name} does not equal {menu_item}! No Match\")        \n",
+    "\n",
+    "#print(report)\n",
+    "\n",
+    "with open(\"output.txt\", \"w\") as file:\n",
+    "    file.write(str(report))"
    ]
   },
   {
@@ -68,22 +104,7 @@
    "id": "d3559bb7-244b-4905-a51a-a276a2a003c6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for row in menu:\n",
-    "    item = row[0]\n",
-    "    price = row[3]\n",
-    "    cost = row[4]\n",
-    "    quantity = 0\n",
-    "    for sales_item in sales:\n",
-    "        if sales_item[4] == item:\n",
-    "            report[sales_item[4]][\"01-count\"] += 1\n",
-    "            report[sales_item[4]][\"02-revenue\"] += price * quantity\n",
-    "            report[sales_item[4]][\"03-cogs\"] += cost * quantity \n",
-    "            report[sales_item[4]][\"04-profit\"] += profit * quantity\n",
-    "            \n",
-    "        else:\n",
-    "            print(f\"{sales_item[4]} does not equal {item}! No Match\")                "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
