final version with added comments

--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "d0c8ce0d-9dcf-4e7a-9c30-333d67577eac",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
       "Financial Analysis\n",
       "--------------------------------\n",
       "Total Months: 86\n",
-      "Total: $38382578.0\"\n",
+      "Total: $38382578.0\n",
       "Average Change: $-2315.12\n",
       "Greatest Increase in Profits: Feb-2012 ($1170593)\n",
       "Greatest Decrease in Profits: Sep-2013 ($-1196225)\n",
@@ -24,6 +24,8 @@
    "source": [
     "import csv\n",
     "import math\n",
+    "\n",
+    "#initialise global variables\n",
     "total = 0\n",
     "count = 0\n",
     "max = 0\n",
@@ -32,11 +34,15 @@
     "max_month = \"\"\n",
     "average = 0\n",
     "profit_list = []\n",
+    "profit_diff = []\n",
     "average_change = 0\n",
+    "\n",
+    "#open csv file and create a reader object to read file\n",
     "with open('budget_data.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    header = next(reader)\n",
     "    \n",
+    "    #go through every row of the budget data and find the count, total, min and max, and append the profit column to a new list\n",
     "    for row in reader:\n",
     "        profit_list.append(row[1])\n",
     "        if float(row[1]) > float(max):\n",
@@ -48,13 +54,15 @@
     "        count += 1\n",
     "        total += float(row[1])\n",
     "        \n",
-    "    for i in range(len(profit_list) - 1):\n",
-    "        profit_diff.append(float(profit_list[i + 1]) - float(profit_list[i]))\n",
+    "#go through the profit list and take find the difference between two consecutive days and save it into the profit_diff list    \n",
+    "for i in range(len(profit_list) - 1):\n",
+    "    profit_diff.append(float(profit_list[i + 1]) - float(profit_list[i]))\n",
     "        \n",
-    "                           \n",
-    "    average_change = math.fsum(profit_diff) / len(profit_diff)\n",
-    "    average = total/count\n",
-    "    text = f'''Financial Analysis\n",
+    "average_change = math.fsum(profit_diff) / len(profit_diff)\n",
+    "average = total/count\n",
+    "    \n",
+    "#create a string to output to the screen and file\n",
+    "text = f'''Financial Analysis\n",
     "--------------------------------\n",
     "Total Months: {count}\n",
     "Total: ${total}\n",
@@ -62,9 +70,10 @@
     "Greatest Increase in Profits: {max_month} (${max})\n",
     "Greatest Decrease in Profits: {min_month} (${min})\n",
     "'''\n",
-    "    print(text)\n",
-    "    with open(\"output.txt\", 'w') as out_file:\n",
-    "        out_file.write(text)\n",
+    "print(text)\n",
+    "    \n",
+    "with open(\"output.txt\", 'w') as out_file:\n",
+    "    out_file.write(text)\n",
     "        \n",
     "    "
    ]
